==> aabzel/trunk/source/mcal/mcal_at32f4/i2s/i2s_drv.c <==
#include "i2s_drv.h"
#include <stdbool.h>
#include <string.h>
#include "clock_const.h"
#include "clock_custom_diag.h"
#include "clock_diag.h"
#include "clock_stm_const.h"
#include "clock_utils.h"
#include "i2s_config.h"
#include "i2s_custom_diag.h"
#include "i2s_custom_drv.h"
#include "i2s_custom_types.h"
#include "i2s_diag.h"
#include "log.h"
#include "at32f435_437_i2s_ex.h"
#include "dma_mcal.h"
#include "param_drv.h"
#include "sw_dac_config.h"
#include "sw_dac_drv.h"
#include "hal_diag.h"
#include "i2s_types.h"
#include "at32f435_437.h"
#include "at32f435_437_rcc_ex.h"
#include "iir_filter.h"
#include "iir_filter_config.h"
#include "sw_dac_drv.h"

bool i2s_init_ll(uint8_t num) {
    bool res = true;
    LOG_INFO(I2S, "%u init", num);
    SPI_TypeDef* I2Sx = NULL;
    I2sHandle_t* Node = I2sGetNode(num);
    const I2sConfig_t* Config = NULL;
    HAL_StatusTypeDef ret = HAL_ERROR;
    if(Node) {
        I2Sx = I2sGetBaseAddr(num);
        if(I2Sx) {
            Config = I2sGetConfNode(num);
            if(Config) {
                res = true;
            } else {
                LOG_ERROR(I2S, "%u ConfigErr", num);
                res = false;
            }
        } else {
            LOG_ERROR(I2S, "%u InstanceErr", num);
            res = false;
        }
    } else {
        LOG_ERROR(I2S, "%u HandleErr", num);
        res = false;
    }

    if(res) {
        // res = i2s_load_params(Config);
        memset((void*)Node->tx_sample.u8, 0, sizeof(Node->tx_sample));
        memset((void*)Node->rx_sample.u8, 0, sizeof(Node->rx_sample));
        Node->tx_cnt = 0;
        Node->rx_cnt = 0;
        Node->rx_buff = NULL;
        Node->rx_buff_size = 0;
        Node->echo = false;
        Node->tx_half_cnt = 0;
        Node->rx_half_cnt = 0;
        Node->i2s_h.Instance = I2Sx;
        Node->i2s_h.Init.AudioFreq = ParseAudioFreq(Config->audio_freq);
        Node->i2s_h.Init.ClockSource = ParseClockSource(Config->clock_source); // I2S_CLOCK_PLL;
        Node->i2s_h.Init.CPOL = ParseCPol(Config->cpol);                       // I2S_CPOL_LOW;
        Node->i2s_h.Init.DataFormat = ParseDataFormat(Config->data_format);
        Node->i2s_h.Init.FullDuplexMode = ParseFullDuplexMode(Config->full_duplex);
        Node->i2s_h.Init.Mode = ParseBusMode(Config->mode);
        Node->i2s_h.Init.MCLKOutput = ParseMCLKOutput(Config->mclk_out);
        Node->i2s_h.Init.Standard = ParseStandard(Config->standard);

        ret = HAL_I2S_Init((I2S_HandleTypeDef*)&Node->i2s_h);
        if(HAL_OK == ret) {
            res = true;
            Node->init_done = true;
#if 0
            ret =  HAL_I2SEx_TransmitReceive_DMA(&Node->i2s_h,
                                                (uint16_t *)&Node->tx_sample,
                                                (uint16_t *)&Node->rx_sample,2);
            if(HAL_OK!=ret) {
                Node->error_cnt++;
                res = false;
            }
#endif
            LOG_INFO(I2S, "I2S%u initOk", num);
        } else {
            Node->error_cnt++;
            LOG_ERROR(I2S, "%u initErr", num);
            res = false;
        }
    }
    return res;
}

bool i2s_init(void) {
    bool res = true;
    LOG_DEBUG(I2S, "init");
    set_log_level(I2S, LOG_LEVEL_NOTICE);

    uint32_t cnt = i2s_get_cnt();
    memcpy(&I2sConfig[0], &I2sConfigLuT[0], cnt * sizeof(I2sConfig_t));

#ifdef HAS_I2S1
    res = i2s_init_ll(1) && res;
#endif /*HAS_I2S1*/

#ifdef HAS_I2S2
    res = i2s_init_ll(2) && res;
#endif /*HAS_I2S2*/

#ifdef HAS_I2S3
    res = i2s_init_ll(3) && res;
#endif /*HAS_I2S3*/

#ifdef HAS_I2S4
    res = i2s_init_ll(4) && res;
#endif /*HAS_I2S4*/

#ifdef HAS_I2S5
    res = i2s_init_ll(5) && res;
#endif /*HAS_I2S5*/
    return res;
}

bool i2s_read_write(uint8_t num, uint32_t tx_sample) {
    bool res = false;
#ifdef SPI_I2S_FULLDUPLEX_SUPPORT
    Type32Union_t un32;
    un32.u32 = tx_sample;
    LOG_DEBUG(I2S, "ReadWrite i2s:%u sample:0x%08x", num, tx_sample);
    I2sHandle_t* Node = I2sGetNode(num);
    if(Node) {
        Node->tx_sample.u32[0] = un32.u16[0];
        Node->tx_sample.u32[1] = un32.u16[1];

        HAL_StatusTypeDef ret = HAL_ERROR;
        ret = HAL_I2SEx_TransmitReceive_DMA(&Node->i2s_h, (uint16_t*)&Node->tx_sample, (uint16_t*)&Node->rx_sample, 2);
        if(HAL_OK != ret) {
            LOG_ERROR(I2S, "%u DmaTxRxErr %u %s", num, ret, HalStatus2Str(ret));
            Node->error_cnt++;
            res = false;
        } else {
            LOG_INFO(I2S, "%u DmaTxRxOk", num);
            res = true;
        }
    }
#endif /*SPI_I2S_FULLDUPLEX_SUPPORT*/
    return res;
}

bool i2s_api_read(uint8_t num, uint32_t* array, size_t words) {
    bool res = false;
    I2sHandle_t* Node = I2sGetNode(num);
    if(Node) {
        uint32_t init_rx_cnt = Node->rx_cnt;
        HAL_StatusTypeDef ret = HAL_I2S_Receive_DMA(&Node->i2s_h, (uint16_t*)array, words);
        if(HAL_OK == ret) {
            res = true;
            uint32_t cnt = 0;
            while(init_rx_cnt == Node->rx_cnt) {
                cnt++;
                if(0x008FFFFF < cnt) {
                    LOG_ERROR(I2S, "RdTimeOut");
                    res = false;
                    break;
                }
            }
        } else {
            LOG_ERROR(I2S, "ReadErr:%u %s", ret, HalStatus2Str(ret));
        }
    }
    return res;
}

bool i2s_play_tx(uint8_t num, uint8_t dac_num, bool status) {
    bool res = false;
    I2sHandle_t* Node = I2sGetNode(num);
    if(Node) {
#ifdef HAS_SW_DAC
        Node->dac_num = 0;
        SwDac_t* DacNode = sw_dac_get_node(dac_num);
        if(DacNode) {
            LOG_DEBUG(I2S, "SpotDac %u", dac_num);
            Node->dac_num = dac_num;
            if(DacNode->tx_sample_array && DacNode->rx_sample_array && (0 < DacNode->sample_cnt)) {
                LOG_DEBUG(I2S, "SpotRecord %u", dac_num);
                LOG_INFO(I2S, "Play %u samples", DacNode->sample_cnt);
                HAL_StatusTypeDef ret = HAL_ERROR;
                Node->loopback = false;
                Node->play = status;
                if(Node->play) {
                    HAL_I2S_StateTypeDef state = HAL_I2S_GetState(&Node->i2s_h);
                    if(HAL_I2S_STATE_READY != state) {
                        LOG_WARNING(I2S, "DmaState:%s DmaStop", HalI2sState2Str(state));
                        i2s_dma_stop(num);
                    }

                    LOG_INFO(I2S, "StartPlay");
                    ret = HAL_I2S_Transmit_DMA(&Node->i2s_h, (uint16_t*)DacNode->tx_sample_array,
                                               DacNode->sample_cnt * 2);

                    // ret = HAL_I2S_Transmit_DMA(&Node->i2s_h, (uint16_t*)&DacNode->real_sample_array[0],
                    //                           DacNode->sample_cnt );

                    if(HAL_OK != ret) {
                        Node->error_cnt++;
                        LOG_ERROR(I2S, "DmaTxErr %s", HalStatus2Str(ret));
                    } else {
                        LOG_INFO(I2S, "DmaTxOk %u Samples", DacNode->sample_cnt);
                        res = true;
                    }
                } else {
                    res = true;
                }
            } else {
                LOG_ERROR(LG_DAC, "TrackErr");
            }
        } else {
            LOG_ERROR(LG_DAC, "HandleErr");
        }
#else
        LOG_ERROR(I2S, "Add SW_DAC component");
#endif /*HAS_SW_DAC*/
    } else {
        LOG_ERROR(I2S, "HandleErr");
    }
    return res;
}

bool i2s_read_sample(uint8_t num, size_t size) {
    bool res = false;
    LOG_DEBUG(I2S, "I2S%u Read %u Samples", num, size);
    I2sHandle_t* Node = I2sGetNode(num);
    if(Node) {
        HAL_StatusTypeDef ret = HAL_ERROR;
        ret = HAL_I2S_Receive_DMA(&Node->i2s_h, (uint16_t*)&Node->rx_sample.u32[0], size);
        if(HAL_OK != ret) {
            Node->error_cnt++;
            LOG_ERROR(I2S, "RxDmaErr: %u %s", ret, HalStatus2Str(ret));
        } else {
            LOG_INFO(I2S, "RxDma" LOG_OK);
            res = true;
        }
    } else {
        LOG_ERROR(I2S, "NodeErr");
    }
    return res;
}

bool i2s_dma_stop(uint8_t num) {
    bool res = false;
    I2sHandle_t* Node = I2sGetNode(num);
    if(Node) {
        HAL_StatusTypeDef ret;
        ret = HAL_I2S_DMAStop(&Node->i2s_h);
        if(HAL_OK == ret) {
            res = true;
            LOG_INFO(I2S, "DmaStop" LOG_OK);
        } else {
            LOG_ERROR(I2S, "DmaStop %s", HalStatus2Str(ret));
        }
    } else {
        LOG_ERROR(I2S, "NodeGetErr");
    }
    return res;
}
